test/indexOutOfBounds22_4.slq

def main(){
	x:=():unit;
	i:=0:𝔹;
	j:=1:𝔹;
	(x[i],x[j]):=(x[j],x[i]); /// error
	return (x,i,j);
}
